[gd_scene load_steps=5 format=3 uid="uid://cm6uybj07qy3v"]

[ext_resource type="Script" uid="uid://ovourxsrx4pl" path="res://scripts/camera/vhs_monitor_effect.gd" id="1_ec4su"]
[ext_resource type="Shader" uid="uid://bnoqr766kwgj2" path="res://assets/shader/vhs_crt_material.gdshader" id="2_c4a8w"]
[ext_resource type="Texture2D" uid="uid://057xcod72xbe" path="res://icon.svg" id="3_v80q0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ec4su"]
shader = ExtResource("2_c4a8w")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.02
shader_parameter/aberration = 0.0
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.2
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="VHSMonitorEffect" type="CanvasLayer"]
layer = 100
script = ExtResource("1_ec4su")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_v80q0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ec4su")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="GlitchButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Glitch"

[node name="DamageButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Damage Effect"

[node name="AberrationButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Color Aberration"

[node name="RollButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Vertical Roll"
